--- a/frontend/src/Components/Chatbot/Chatbot.css
+++ b/frontend/src/Components/Chatbot/Chatbot.css
@@ -1,3 +1,10 @@
+:root {
+  --dark-color: #3074f0;
+  --primary-color: #f7c9d2;
+  --light-color: #f5f5f5;
+  --success-color: #8c8f94;
+}
+
 .chatbot-container {
   position: fixed;
   bottom: 20px;
